# tyr_project

./: main.py  pyproject.toml
app/data/: tours_data.py
app/model/: models.py  tours.py
app/models/: base.py  models.py  tours.py
app/routers/: tyrs.py
app/static/: style.css
app/templates/: _base.html  add_tyr.html  index.html  reserve_tyr.html
instance/: tours.db
